--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,6 +68,7 @@
         </div>
       </div>
       <p class="btn btn-secondary next submit" type="submit" name="submit">Submit & Next</p>
+      <p id="alreadyamember" style="float: right; text-align: right;">Already a member?</p>
     </form>
 
     <form class="text-light active" style="opacity: 1;" id="form2" method="POST">
@@ -125,7 +126,22 @@
       <p class="btn btn-secondary previous">Previous</p>
       <p type="submit" class="btn btn-secondary submit">Submit</p>
     </form>
+
+    <form class="text-light active" style="opacity: 1;" id="form4" method="POST">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" required>
+        <small id="emailHelp2" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword" required>
+      </div>
+      <p class="btn btn-secondary next submit" type="submit">Sign In</p>
+      <p id="noaccount" style="float: right; text-align: right;">Don't have an account?</p>
+    </form>
   </fieldset>
+
 </div>
 </div>
 
